@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: The paging broke for SVT listings (Fixes #719)
+Fixed: SVT is moving to a JSON embed data set which is breaking the SVT channel every now and then.
 
 [I]Previous changes[/I]
+Fixed: The paging broke for SVT listings (Fixes #719)
 Fixed: SVT updated their main show listing (Fixes #715)
 Fixed: Kanal5 'recent' streams broke
 Fixed: Video stream parsing for some  SVT streams (Fixes #712)
